infra/manifests/app/emqx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mqtt-broker
  namespace: mqtt-broker
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
#  tls:
#    - hosts:
#        - "*.plarail.k1h.dev"
#        - "plarail.k1h.dev"
#      secretName: cloudflare-cert
  ingressClassName: nginx
  rules:
    - host: mqtt.plarail.k1h.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx
                port:
                  number: 18083
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx
                port:
                  number: 1883
